--- a/Client/Client.fsproj
+++ b/Client/Client.fsproj
@@ -22,6 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="EchoService.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
@@ -30,6 +31,10 @@
     <PackageReference Include="CoreWCF.NetTcp" Version="0.1.0-alpha.125" />
     <PackageReference Include="CoreWCF.Primitives" Version="0.1.0-alpha.125" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.ServiceModel.Http" Version="4.8.0-preview3.20412.3" />
+    <PackageReference Include="System.ServiceModel.NetTcp" Version="4.8.0-preview3.20412.3" />
+    <PackageReference Include="System.ServiceModel.Primitives" Version="4.8.0-preview3.20412.3" />
   </ItemGroup>
 
   <ItemGroup>
