--- a/Samples/NetCoreServer/NetCoreServer.fsproj
+++ b/Samples/NetCoreServer/NetCoreServer.fsproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
-    <AssemblyName>Softellect.Communication.Server</AssemblyName>
+    <AssemblyName>Softellect.Communication.Samples.NetCoreServer</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
