--- a/Samples/NetCoreClient/NetCoreClient.fsproj
+++ b/Samples/NetCoreClient/NetCoreClient.fsproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
-    <AssemblyName>Softellect.Communication.Client</AssemblyName>
+    <AssemblyName>Softellect.Communication.Samples.NetCoreClient</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
