--- a/Samples/WcfServer/WcfServer.fsproj
+++ b/Samples/WcfServer/WcfServer.fsproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
-    <AssemblyName>Softellect.Communication.Samples.NetCoreClient</AssemblyName>
+    <AssemblyName>Softellect.Communication.Samples.WcfServer</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -22,7 +22,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="EchoClient.fs" />
+    <Compile Include="EchoWcfService.fs" />
+    <Compile Include="Startup.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
@@ -30,11 +31,18 @@
     <PackageReference Include="CoreWCF.Http" Version="0.1.0-alpha.125" />
     <PackageReference Include="CoreWCF.NetTcp" Version="0.1.0-alpha.125" />
     <PackageReference Include="CoreWCF.Primitives" Version="0.1.0-alpha.125" />
+    <PackageReference Include="FsPickler" Version="5.3.2" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.ServiceModel.Http" Version="4.8.0-preview3.20412.3" />
     <PackageReference Include="System.ServiceModel.NetTcp" Version="4.8.0-preview3.20412.3" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.8.0-preview3.20412.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Communication\Communication.fsproj" />
+    <ProjectReference Include="..\..\Core\Core.fsproj" />
+    <ProjectReference Include="..\WcfServiceInfo\WcfServiceInfo.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
