--- a/Samples/WcfServiceInfo/WcfServiceInfo.fsproj
+++ b/Samples/WcfServiceInfo/WcfServiceInfo.fsproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
-    <AssemblyName>Softellect.Communication.Samples.NetCoreClient</AssemblyName>
+    <AssemblyName>Softellect.Communication.Samples.WcfServiceInfo</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -22,19 +22,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="EchoClient.fs" />
-    <Compile Include="Program.fs" />
+    <Compile Include="EchoWcfServiceInfo.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CoreWCF.Http" Version="0.1.0-alpha.125" />
     <PackageReference Include="CoreWCF.NetTcp" Version="0.1.0-alpha.125" />
     <PackageReference Include="CoreWCF.Primitives" Version="0.1.0-alpha.125" />
+    <PackageReference Include="FsPickler" Version="5.3.2" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.ServiceModel.Http" Version="4.8.0-preview3.20412.3" />
     <PackageReference Include="System.ServiceModel.NetTcp" Version="4.8.0-preview3.20412.3" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.8.0-preview3.20412.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Communication\Communication.fsproj" />
+    <ProjectReference Include="..\..\Core\Core.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
