--- a/Samples/Wcf/WcfService/WcfService.fsproj
+++ b/Samples/Wcf/WcfService/WcfService.fsproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
-    <AssemblyName>Softellect.Communication.Samples.NetCoreServer</AssemblyName>
+    <AssemblyName>Softellect.Samples.Wcf.WcfService</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -22,8 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="EchoService.fs" />
-    <Compile Include="Startup.fs" />
+    <Compile Include="EchoWcfService.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
@@ -31,11 +30,18 @@
     <PackageReference Include="CoreWCF.Http" Version="0.1.0-alpha.208" />
     <PackageReference Include="CoreWCF.NetTcp" Version="0.1.0-alpha.208" />
     <PackageReference Include="CoreWCF.Primitives" Version="0.1.0-alpha.208" />
+    <PackageReference Include="FsPickler" Version="5.3.2" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.ServiceModel.Http" Version="4.8.0-preview3.20412.3" />
     <PackageReference Include="System.ServiceModel.NetTcp" Version="4.8.0-preview3.20412.3" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.8.0-preview3.20412.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Sys\Sys.fsproj" />
+    <ProjectReference Include="..\..\..\Wcf\Wcf.fsproj" />
+    <ProjectReference Include="..\WcfServiceInfo\WcfServiceInfo.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
