--- a/Sys/Sys.fsproj
+++ b/Sys/Sys.fsproj
@@ -1,10 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
-    <AssemblyName>Softellect.Communication.Samples.WcfServer</AssemblyName>
+    <AssemblyName>Softellect.Sys</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -17,13 +16,14 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
     <OtherFlags>--warnaserror+:25 --platform:x64</OtherFlags>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="EchoWcfService.fs" />
-    <Compile Include="Program.fs" />
+    <Compile Include="GeneralErrors.fs" />
+    <Compile Include="Primitives.fs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,12 +36,6 @@
     <PackageReference Include="System.ServiceModel.Http" Version="4.8.0-preview3.20412.3" />
     <PackageReference Include="System.ServiceModel.NetTcp" Version="4.8.0-preview3.20412.3" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.8.0-preview3.20412.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Communication\Communication.fsproj" />
-    <ProjectReference Include="..\..\Core\Core.fsproj" />
-    <ProjectReference Include="..\WcfServiceInfo\WcfServiceInfo.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
