--- a/Wcf/Wcf.fsproj
+++ b/Wcf/Wcf.fsproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
-    <AssemblyName>Softellect.Communication</AssemblyName>
+    <AssemblyName>Softellect.Wcf</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -21,8 +21,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Wcf.fs" />
-    <Compile Include="WcfServer.fs" />
+    <Compile Include="Common.fs" />
+    <Compile Include="Client.fs" />
+    <Compile Include="Service.fs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -38,7 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.fsproj" />
+    <ProjectReference Include="..\Sys\Sys.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
