--- a/WorkerService1/WorkerService1.csproj
+++ b/WorkerService1/WorkerService1.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>dotnet-WorkerService1-EBDA3388-7429-4F7D-B248-E1CCE4CF97F2</UserSecretsId>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
