--- a/Samples/Wcf/WcfServiceInfo/WcfServiceInfo.fsproj
+++ b/Samples/Wcf/WcfServiceInfo/WcfServiceInfo.fsproj
@@ -22,6 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="EchoErrors.fs" />
     <Compile Include="EchoWcfServiceInfo.fs" />
   </ItemGroup>
 
@@ -43,7 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="5.0.0-beta.20501.2" />
+    <PackageReference Update="FSharp.Core" Version="5.0.0-beta.20502.1" />
   </ItemGroup>
 
 </Project>
