--- a/Sys/Sys.fsproj
+++ b/Sys/Sys.fsproj
@@ -22,11 +22,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="GeneralErrors.fs" />
-    <Compile Include="TimerErrors.fs" />
-    <Compile Include="WcfErrors.fs" />
-    <Compile Include="Errors.fs" />
     <Compile Include="Primitives.fs" />
+    <Compile Include="MessagingPrimitives.fs" />
+    <Compile Include="GeneralErrors.fs" />
+    <Compile Include="WcfErrors.fs" />
+    <Compile Include="MessagingClientErrors.fs" />
+    <Compile Include="MessagingServiceErrors.fs" />
+    <Compile Include="TimerErrors.fs" />
+    <Compile Include="Errors.fs" />
     <Compile Include="Logging.fs" />
     <Compile Include="Core.fs" />
     <Compile Include="Retry.fs" />
