--- a/Messaging/Messaging.fsproj
+++ b/Messaging/Messaging.fsproj
@@ -9,9 +9,7 @@
   <ItemGroup>
     <Compile Include="Primitives.fs" />
     <Compile Include="ServiceInfo.fs" />
-    <Compile Include="ClientProxy.fs" />
-    <Compile Include="ServiceProxy.fs" />
-    <Compile Include="MessageProcessorProxy.fs" />
+    <Compile Include="Proxy.fs" />
     <Compile Include="Client.fs" />
     <Compile Include="Service.fs" />
   </ItemGroup>
