--- a/Samples/Msg/MsgClientOne/MsgClientOne.fsproj
+++ b/Samples/Msg/MsgClientOne/MsgClientOne.fsproj
@@ -4,10 +4,15 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
+    <AssemblyName>Softellect.Samples.Msg.ClientOne</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="Program.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MsgServiceInfo\MsgServiceInfo.fsproj" />
   </ItemGroup>
 
 </Project>
