--- a/Sys/Sys.fsproj
+++ b/Sys/Sys.fsproj
@@ -22,12 +22,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="NamingConventions.fs" />
     <Compile Include="Primitives.fs" />
     <Compile Include="MessagingPrimitives.fs" />
     <Compile Include="GeneralErrors.fs" />
+    <Compile Include="TimerErrors.fs" />
     <Compile Include="WcfErrors.fs" />
     <Compile Include="MessagingErrors.fs" />
-    <Compile Include="TimerErrors.fs" />
     <Compile Include="Errors.fs" />
     <Compile Include="Logging.fs" />
     <Compile Include="Core.fs" />
