--- a/Sys/Sys.fsproj
+++ b/Sys/Sys.fsproj
@@ -35,22 +35,29 @@
     <Compile Include="Rop.fs" />
     <Compile Include="Retry.fs" />
     <Compile Include="TimerEvents.fs" />
+    <Compile Include="ServiceInstaller.fs" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Argu" Version="6.1.1" />
     <PackageReference Include="CoreWCF.Http" Version="0.1.0-alpha.209" />
     <PackageReference Include="CoreWCF.NetTcp" Version="0.1.0-alpha.209" />
     <PackageReference Include="CoreWCF.Primitives" Version="0.1.0-alpha.209" />
     <PackageReference Include="FsPickler" Version="5.3.2" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0-rc.1.20451.14" />
     <PackageReference Include="System.ServiceModel.Http" Version="4.8.0-preview3.20412.3" />
     <PackageReference Include="System.ServiceModel.NetTcp" Version="4.8.0-preview3.20412.3" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.8.0-preview3.20412.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="5.0.0-beta.20502.1" />
+    <ProjectReference Include="..\Platform\Platform.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.0-beta.20509.1" />
   </ItemGroup>
 
 </Project>
