--- a/Platform/Platform.fsproj
+++ b/Platform/Platform.fsproj
@@ -10,4 +10,9 @@
     <Compile Include="Interop.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Core.System.Configuration.Install" Version="1.1.0" />
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="5.0.0-rc.2.20475.5" />
+  </ItemGroup>
+
 </Project>
