--- a/fsharpworker/fsharpworker.fsproj
+++ b/fsharpworker/fsharpworker.fsproj
@@ -13,11 +13,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0-rc.1.20451.14" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="5.0.0-rc.1.20451.7" />
+    <PackageReference Include="MassTransit" Version="7.0.5-develop.2983" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="7.0.5-develop.2983" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0-rc.2.20475.5" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="5.0.0-rc.2.20478.4" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
+    <PackageReference Include="Topshelf" Version="4.2.1.218-develop" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="5.0.0-beta.20509.1" />
+    <PackageReference Update="FSharp.Core" Version="5.0.0-beta.20513.4" />
   </ItemGroup>
 </Project>
