--- a/Samples/Wcf/WcfService/WcfService.fsproj
+++ b/Samples/Wcf/WcfService/WcfService.fsproj
@@ -26,6 +26,8 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup />
+
   <ItemGroup>
     <PackageReference Include="CoreWCF.Http" Version="0.1.0-alpha.209" />
     <PackageReference Include="CoreWCF.NetTcp" Version="0.1.0-alpha.209" />
