--- a/WebAppMixed/WebAppMixed_Net5.csproj
+++ b/WebAppMixed/WebAppMixed_Net5.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <Compile Remove="Global.asax.cs" />
+    <Compile Remove="Properties\AssemblyInfo.cs" />
   </ItemGroup>
 
   <ItemGroup>
