--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,4 @@ MigrationBackup/
 .idea/
 .idea/.idea.SoftellectMain/.idea/workspace.xml
 .idea/.idea.SoftellectMain/.idea/workspace.xml
+.idea/.idea.SoftellectMain/.idea/workspace.xml
