--- a/Sys/Sys.fsproj
+++ b/Sys/Sys.fsproj
@@ -40,6 +40,7 @@
     <Compile Include="Retry.fs" />
     <Compile Include="TimerEvents.fs" />
     <Compile Include="ServiceInstaller.fs" />
+    <Compile Include="AppSettings.fs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -48,6 +49,7 @@
     <PackageReference Include="CoreWCF.Http" Version="0.1.0-alpha.214" />
     <PackageReference Include="CoreWCF.NetTcp" Version="0.1.0-alpha.214" />
     <PackageReference Include="CoreWCF.Primitives" Version="0.1.0-alpha.214" />
+    <PackageReference Include="FSharp.Interop.Dynamic" Version="5.0.1.268" />
     <PackageReference Include="FsPickler" Version="5.3.2" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
