--- a/.gitignore
+++ b/.gitignore
@@ -353,3 +353,4 @@ MigrationBackup/
 .idea/.idea.SoftellectMain/.idea/workspace.xml
 .idea/.idea.SoftellectMain/.idea/workspace.xml
 .idea/.idea.SoftellectMain/.idea/workspace.xml
+.idea/.idea.SoftellectMain/.idea/workspace.xml
