--- a/TestUpdateJson2/TestUpdateJson2.fsproj
+++ b/TestUpdateJson2/TestUpdateJson2.fsproj
@@ -11,6 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="TestSettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -21,6 +24,10 @@
     <PackageReference Include="FsPickler" Version="5.3.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Sys\Sys.fsproj" />
   </ItemGroup>
 
 </Project>
