--- a/Wcf/Wcf.fsproj
+++ b/Wcf/Wcf.fsproj
@@ -8,7 +8,7 @@
     <Authors>Konstantin Konstantinov</Authors>
     <Company>Softellect Systems, Inc.</Company>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>0.0.1-alpha.115</Version>
+    <Version>0.0.1-alpha.116</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -29,6 +29,10 @@
     <Compile Include="Common.fs" />
     <Compile Include="Client.fs" />
     <Compile Include="Service.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
