--- a/Sys/Sys.fsproj
+++ b/Sys/Sys.fsproj
@@ -9,6 +9,7 @@
     <Company>Softellect Systems, Inc.</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>0.0.1-alpha.116</Version>
+    <PackageVersion>0.0.1-alpha.117</PackageVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
