--- a/Samples/Msg/MsgWorker/MsgWorker.fsproj
+++ b/Samples/Msg/MsgWorker/MsgWorker.fsproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
+        <Platforms>AnyCPU;x64</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
@@ -31,8 +32,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Msg\MsgServiceInfo\MsgServiceInfo.fsproj" />
-      <ProjectReference Include="..\Msg\MsgService\MsgService.fsproj" />
+      <ProjectReference Include="..\MsgServiceInfo\MsgServiceInfo.fsproj" />
     </ItemGroup>
 
 </Project>
