--- a/Sys/Sys.fsproj
+++ b/Sys/Sys.fsproj
@@ -8,8 +8,8 @@
     <Authors>Konstantin Konstantinov</Authors>
     <Company>Softellect Systems, Inc.</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.0.1-alpha.126</Version>
-    <PackageVersion>0.0.1-alpha.126</PackageVersion>
+    <Version>0.0.1-alpha.127</Version>
+    <PackageVersion>0.0.1-alpha.127</PackageVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -47,17 +47,17 @@
   <ItemGroup>
     <PackageReference Include="Argu" Version="6.1.1" />
     <PackageReference Include="Core.System.Configuration.Install" Version="1.1.0" />
-    <PackageReference Include="CoreWCF.Http" Version="0.1.0-alpha.218" />
-    <PackageReference Include="CoreWCF.NetTcp" Version="0.1.0-alpha.218" />
-    <PackageReference Include="CoreWCF.Primitives" Version="0.1.0-alpha.218" />
+    <PackageReference Include="CoreWCF.Http" Version="0.2.0-alpha" />
+    <PackageReference Include="CoreWCF.NetTcp" Version="0.2.0-alpha" />
+    <PackageReference Include="CoreWCF.Primitives" Version="0.2.0-alpha" />
     <PackageReference Include="FSharp.Interop.Dynamic" Version="5.0.1.268" />
     <PackageReference Include="FsPickler" Version="5.3.2" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
-    <PackageReference Include="System.ServiceModel.Http" Version="4.8.0" />
-    <PackageReference Include="System.ServiceModel.NetTcp" Version="4.8.0" />
-    <PackageReference Include="System.ServiceModel.Primitives" Version="4.8.0" />
+    <PackageReference Include="System.ServiceModel.Http" Version="4.8.1" />
+    <PackageReference Include="System.ServiceModel.NetTcp" Version="4.8.1" />
+    <PackageReference Include="System.ServiceModel.Primitives" Version="4.8.1" />
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="5.0.0" />
   </ItemGroup>
 
