--- a/Samples/Wcf/WcfServiceInfo/WcfServiceInfo.fsproj
+++ b/Samples/Wcf/WcfServiceInfo/WcfServiceInfo.fsproj
@@ -31,4 +31,8 @@
     <ProjectReference Include="..\..\..\Wcf\Wcf.fsproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.1" />
+  </ItemGroup>
+
 </Project>
