--- a/Wcf/Wcf.fsproj
+++ b/Wcf/Wcf.fsproj
@@ -8,8 +8,8 @@
     <Authors>Konstantin Konstantinov</Authors>
     <Company>Softellect Systems, Inc.</Company>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>0.1.4</Version>
-    <PackageVersion>0.1.4</PackageVersion>
+    <Version>0.1.5</Version>
+    <PackageVersion>0.1.5</PackageVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -38,6 +38,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Sys\Sys.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
