--- a/MessagingData/MessagingData.fsproj
+++ b/MessagingData/MessagingData.fsproj
@@ -19,4 +19,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.1" />
+  </ItemGroup>
+
 </Project>
