--- a/Platform/Platform.fsproj
+++ b/Platform/Platform.fsproj
@@ -15,4 +15,8 @@
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.1" />
+  </ItemGroup>
+
 </Project>
