--- a/Samples/Msg/MsgClientTwo/MsgClientTwo.fsproj
+++ b/Samples/Msg/MsgClientTwo/MsgClientTwo.fsproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\MsgServiceInfo\MsgServiceInfo.fsproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.1" />
+  </ItemGroup>
+
 </Project>
