--- a/Samples/Msg/MsgServiceInfo/MsgServiceInfo.fsproj
+++ b/Samples/Msg/MsgServiceInfo/MsgServiceInfo.fsproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\..\..\Sys\Sys.fsproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.1" />
+  </ItemGroup>
+
 </Project>
