--- a/Samples/Msg/MsgWorker/MsgWorker.fsproj
+++ b/Samples/Msg/MsgWorker/MsgWorker.fsproj
@@ -35,4 +35,8 @@
       <ProjectReference Include="..\MsgServiceInfo\MsgServiceInfo.fsproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Update="FSharp.Core" Version="5.0.1" />
+    </ItemGroup>
+
 </Project>
