--- a/Samples/Wcf/NetCoreClient/NetCoreClient.fsproj
+++ b/Samples/Wcf/NetCoreClient/NetCoreClient.fsproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\..\..\Sys\Sys.fsproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.1" />
+  </ItemGroup>
+
 </Project>
