--- a/Samples/Wcf/WcfClient/WcfClient.fsproj
+++ b/Samples/Wcf/WcfClient/WcfClient.fsproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\WcfServiceInfo\WcfServiceInfo.fsproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.1" />
+  </ItemGroup>
+
 </Project>
