--- a/Samples/Wcf/WcfService/WcfService.fsproj
+++ b/Samples/Wcf/WcfService/WcfService.fsproj
@@ -34,4 +34,8 @@
     <ProjectReference Include="..\WcfServiceInfo\WcfServiceInfo.fsproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.1" />
+  </ItemGroup>
+
 </Project>
