NET6 - Update Packages

--- a/MessagingData/MessagingData.fsproj
+++ b/MessagingData/MessagingData.fsproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>Softellect.Messaging.Data</AssemblyName>
-    <Platforms>AnyCPU;x64</Platforms>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
