--- a/Samples/Wcf/WcfWorker/WcfWorker.fsproj
+++ b/Samples/Wcf/WcfWorker/WcfWorker.fsproj
@@ -3,7 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <UserSecretsId>dotnet-WcfWorker-42B7797B-10C0-4875-B86B-A635EEE2C57E</UserSecretsId>
     <AssemblyName>Softellect.Samples.Wcf.WcfWorker</AssemblyName>
-    <Platforms>AnyCPU;x64</Platforms>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
