--- a/Samples/Msg/MsgServiceInfo/MsgServiceInfo.fsproj
+++ b/Samples/Msg/MsgServiceInfo/MsgServiceInfo.fsproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Platforms>AnyCPU;x64</Platforms>
+    <Platforms>x64</Platforms>
     <AssemblyName>Softellect.Samples.Msg.ServiceInfo</AssemblyName>
   </PropertyGroup>
 
