--- a/Platform/Platform.fsproj
+++ b/Platform/Platform.fsproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <AssemblyName>Softellect.Platform</AssemblyName>
     <Platforms>x64</Platforms>
   </PropertyGroup>
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.ServiceProcess.ServiceController" Version="6.0.0" />
-    <PackageReference Update="FSharp.Core" Version="6.0.5" />
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="7.0.0-rc.1.22426.10" />
+    <PackageReference Update="FSharp.Core" Version="7.0.0-beta.22427.1" />
   </ItemGroup>
 
 </Project>
