--- a/MessagingService/MessagingService.fsproj
+++ b/MessagingService/MessagingService.fsproj
@@ -43,10 +43,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Compile Include="MsgSvcCommandLine.fs" />
-    <Compile Include="MsgServiceTasks.fs" />
-    <Compile Include="MsgImplementation.fs" />
+    <Compile Include="ServiceImplementation.fs" />
     <Compile Include="MsgWorker.fs" />
-    <Compile Include="MsgProgram.fs" />
   </ItemGroup>
 
   <ItemGroup>
