--- a/Messaging/Messaging.fsproj
+++ b/Messaging/Messaging.fsproj
@@ -30,6 +30,8 @@
     <Compile Include="Client.fs" />
     <Compile Include="Service.fs" />
     <Compile Include="Settings.fs" />
+    <Compile Include="DataAccess.fs" />
+    <Compile Include="ServiceProxy.fs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -38,6 +40,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="SQLProvider" Version="1.3.43" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="SQLite.Interop.dll" Version="1.0.103" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
+    <PackageReference Include="System.Data.Common" Version="4.3.0" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
     <PackageReference Update="FSharp.Core" Version="8.0.301" />
   </ItemGroup>
 
