--- a/Wcf/Wcf.fsproj
+++ b/Wcf/Wcf.fsproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <Compile Include="Errors.fs" />
     <Compile Include="Common.fs" />
+    <Compile Include="AppSettings.fs" />
     <Compile Include="Client.fs" />
     <Compile Include="Service.fs" />
   </ItemGroup>
