--- a/Samples/Msg/MsgWorker/MsgWorker.fsproj
+++ b/Samples/Msg/MsgWorker/MsgWorker.fsproj
@@ -12,6 +12,8 @@
           <CopyToOutputDirectory>Never</CopyToOutputDirectory>
           <CopyToPublishDirectory>Never</CopyToPublishDirectory>
         </Content>
+        <None Include="MessagingVersionInfo.PS1" CopyToOutputDirectory="PreserveNewest" Condition="Exists('MessagingVersionInfo.PS1')" />
+        <None Include="MessagingServiceName.PS1" CopyToOutputDirectory="PreserveNewest" Condition="Exists('MessagingServiceName.PS1')" />
         <Content Include="appsettings.Development.json">
           <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -24,10 +26,6 @@
         </Content>
         <Compile Include="Program.fs" />
     </ItemGroup>
-
-  <ItemGroup>
-    <None Include="MessagingServiceName.PS1" CopyToOutputDirectory="PreserveNewest" Condition="Exists('MessagingServiceName.PS1')" />
-  </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
